Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ HGE is a game engine that use OpenGL for rendering and written by C++11 and it i
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>Creator, designed and implementer:<br>
+<p>Creator, designer and implementer:<br>
     Hossein Noroozpour <a href="https://github.com/Hossein-Noroozpour" class="user-mention">@Hossein-Noroozpour</a><br>
     Email address: <a href="mailto:Hossein.Noroozpour@GMail.com">Hossein.Noroozpour@GMail.com</a><br></p>
 
